// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "scalapb/scalapb.proto";

// Definition of the MediatorResponse message which is shared between the transaction and transfer protocol

message MediatorResponse {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  google.protobuf.Timestamp request_id = 1;
  string sender = 2;
  bytes view_hash = 3; // May be empty for Malformed verdicts if the participant cannot determine the view hash.
  LocalVerdict local_verdict = 4; // new type LocalVerdict
  bytes root_hash = 5; // May be empty for Malformed verdicts if the participant cannot determine the root hash.
  repeated string confirming_parties = 6; // Empty iff the verdict is malformed.
  string domain_id = 7;
}

message LocalVerdict {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  oneof some_local_verdict {
    google.protobuf.Empty local_approve = 1;
    LocalReject local_reject = 2; // new type LocalReject
  }
}

message LocalReject {
  reserved 1; // removed: enum Code

  // cause_prefix + details constitute the cause of the rejection.
  string cause_prefix = 4; // new field
  string details = 2; // renamed from reason

  repeated string resource = 3; // affected resources

  string error_code = 5; // new field
  uint32 error_category = 6; // new field
}
